Add routes to frontofficeservice
